Fixed issue with paths on windowns